# forecast-review-openspec

./: .gitignore  context.md  todo.md  typescript-coding-style-guide.md
backend/: API_DOCUMENTATION.md  DEPLOYMENT.md  FEATURE_UPDATES.md  INSIGHTS_AUTO_GENERATION.md  README.md  init_db.py  pyproject.toml  requirements.txt  test_llm.py
backend/app/: config.py  main.py  schemas.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/routers/: health.py  insights.py  personas.py  simulations.py
backend/app/services/: __init__.py  insights.py  llm.py  persona.py  prompts.py  simulation.py
backend/migrations/: 001_initial_schema.sql  001_initial_schema_rollback.sql  002_increase_archetype_length.sql  002_increase_archetype_length_rollback.sql  README.md
backend/tests/: conftest.py  test_integration.py  test_performance.py  test_unit.py
frontend/: README.md  index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ErrorBoundary.tsx  ImprovementTips.tsx  InsightsDashboard.tsx  Layout.tsx  PainPoints.tsx  PersonaCard.tsx  PersonaGenerator.tsx  PersonaLibrary.tsx  PersonaReaction.tsx  SimulationForm.tsx  SimulationResults.tsx
frontend/src/pages/: HistoryPage.tsx  HomePage.tsx  InsightsPage.tsx  NotFound.tsx  PersonasPage.tsx  SimulatePage.tsx
frontend/src/types/: types.ts
openspec/: project.md
openspec/changes/add-react-frontend/: README.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-15-add-fanecho-mvp/: proposal.md  tasks.md
(+7 files in other folders)
